# framewatch

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  framewatch-spec.md
.github/workflows/: ci.yml
docs/: AGENT_INTEGRATION.md  README.md
examples/: embed.rs
src/: audioutil.rs  clock.rs  config.rs  engine.rs  error.rs  event.rs  frame.rs  lib.rs  recording.rs  session.rs  transcript.rs  util.rs
src/capture/: mock.rs  mod.rs
src/capture/windows/: enumerate.rs  mod.rs  wgc.rs
src/detect/: diff.rs  hash.rs  mod.rs  roi.rs  volatility.rs
src/gui/: app.rs  mod.rs
src/record/: audio.rs  ffmpeg.rs  mod.rs  video.rs
src/sink/: channel.rs  directory.rs  mod.rs
tests/: crop.rs  dedup.rs  engine_auto_spinner.rs  engine_dedup_session.rs  engine_extra.rs  engine_fullscreen.rs  engine_spinner.rs  engine_static.rs  engine_value.rs  metadata_golden.rs  recording_package.rs  sink_directory.rs  watch_driver.rs
tests/common/: mod.rs
